wip[backend]: added chat support
