# backend/internal/docs/swagger.json
@@ -168,21 +168,12 @@
                 "summary": "Запуск сценария из обработанного текста",
                 "parameters": [
                     {
-                        "description": "сессия к которой относится запрос",
-                        "name": "sessionId",
+                        "description": "данные для запроса",
+                        "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "запрос пользователя",
-                        "name": "query",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.MlDetectionRequest"
                         }
                     }
                 ],
@@ -546,6 +537,23 @@
                 }
             }
         },
+        "handler.MlDetectionRequest": {
+            "type": "object",
+            "properties": {
+                "names": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "query": {
+                    "type": "string"
+                },
+                "sessionId": {
+                    "type": "string"
+                }
+            }
+        },
         "handler.TopUpMobilePhoneResponse": {
             "type": "object",
             "properties": {
@@ -744,8 +752,20 @@
                 "id": {
                     "type": "integer"
                 },
+                "inputmode": {
+                    "type": "string"
+                },
+                "label": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string"
+                },
+                "placeholder": {
+                    "type": "string"
+                },
+                "spellcheck": {
+                    "type": "boolean"
                 },
                 "type": {
                     "type": "string"
